Actualiza el Contacto

--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <title>Contacto</title>
 </head>
 <body>
-    correo: anto@inc.com
+    <h1>correo: anto@inc.com</h1>
+        <p>Instructora</p>
 </body>
 </html>
